2014-05-10  Araki Ken  <arakiken@users.sf.net>

	* README, man/mlterm.1, README.ja: Updated.

	* im_fcitx.c: fcitx plugin works on framebuffer.

2014-05-10  Araki Ken  <arakiken@users.sf.net>

	* x_im.c: Segmentation fault in exiting with fcitx is fixed.

	* im_fcitx.c: connection_handler() is registerd to x_event_source
	  only if the initialization of fcitx succeeds.

	* im_ibus.c: Minor fixes.

2014-05-10  Araki Ken  <arakiken@users.sf.net>

	* inputmethod/fcitx: Added.

	* configure.in: --enable-fcitx option is added.

2014-05-05  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: The hack of continuing sixel sequence by FF, GS, RS and US
	  after ST is removed.

	* x_draw_str.c: INLINEPIC_ID and INLINEPIC_POS are defined. (Not in x_picture.h)

	* x_picture.c, x_screen.c: Following macros in ml_char.h are used.

	* ml_char.h:
	  - PICTURE_ID_BITS and PICTURE_POS_BITS are defined. (Not in x_picture.h)
	  - ml_char_combine_picture(), ml_char_picture_id() and ml_char_set_picture_id()
	    macros are defined.

	* x_picture.h: INLINEPIC_ID_SHIFT, INLINEPIC_ID and INLINEPIC_POS macros
	  are removed.

2014-05-02  Araki Ken  <arakiken@users.sf.net>

	* x_display_wscons.c: WSDISPLAYIO_MODE_DUMBFB is used instead of
	  WSDISPLAYIO_MODE_MAPPED on NetBSD.

	* x_font_ft.c: cairo_matrix_init_identity() + cairo_matrix_scale()
	  => cairo_matrix_init_scale().

2014-04-26  Araki Ken  <arakiken@users.sf.net>

	* x_draw_str.c: The margin area of transparent frame of animation gif is
	  never cleared.

	* version.h.in: 3.3.5 -> 3.3.5post

2014-04-26  Araki Ken  <arakiken@users.sf.net>

	* 3.3.5 released.
	  (tag "rel-3_3_5")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.5.

2014-04-25  Araki Ken  <arakiken@users.sf.net>

	* x_font_ft.c: The default width of proportional fonts is changed from the
	  width of 'N' to 'M'.
