@@ -341,10 +341,11 @@ connected(
 
 	fcitx_client_set_capacity( client ,
 	#ifdef  USE_FRAMEBUFFER
-		CAPACITY_CLIENT_SIDE_UI|CAPACITY_CLIENT_SIDE_CONTROL_STATE) ;
+		CAPACITY_CLIENT_SIDE_UI|CAPACITY_CLIENT_SIDE_CONTROL_STATE
 	#else
-		CAPACITY_PREEDIT|CAPACITY_SURROUNDING_TEXT|CAPACITY_FORMATTED_PREEDIT) ;
+		CAPACITY_PREEDIT|CAPACITY_FORMATTED_PREEDIT
 	#endif
+		) ;
 	fcitx_client_focus_in( client) ;
 }
 
